--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<title>Brown Bears</title>
+		<link rel="stylesheet" href="style.css"></link>
 	</head>
 	<body>
 	<div class="page">
