--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 			<a href="./index.html">Brown Bear</a>
 			<a href="./aboutme.html">About Me</a>
 		</nav>
+		<h1 id="title">The Brown Bear</h1>
 		<div class="page-content">
-			<h1>The Brown Bear</h1>
+
 			<nav class="top-nav">
 				<ul>
 					<li>
